# ir-playbooks-automation

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  ir_playbooks_automation_cli.py  pyproject.toml
.github/workflows/: playbook-lint.yml
automations/: __init__.py  after_action_report_generator.py  forensic_hash_verifier.py  incident_correlation_engine.py  ioc_enricher.py  logging_compat.py  malware_triage_scorer.py  mitre_attack_tagger.py  pcap_trigger.py  runbook_xref.py  sla_tracker.py  timeline_builder.py
automations/cloud/: __init__.py  forensic_snapshot.py  isolate_aws_instance.py  isolate_azure_vm.py  isolate_gcp_instance.py  lockdown_gcs_bucket.py  lockdown_s3_bucket.py  quarantine_aws_lambda.py
automations/evidence_packaging/: __init__.py  package_evidence.py  packager.py
automations/identity/: revoke_azure_sessions.ps1
cli/: __init__.py  commands.py  ir_cli.py  main.py  workflow.py
docs/: README.md  incident-response-model.md  ir-lifecycle.md  jira-webhook-template.md  overview.md  triage-checklist.md
docs/prompts/: ir_prompts.md
playbooks/: slack-security-alerts.md
playbooks/containment/: cloud_exposure.md  compromised_credentials.md
playbooks/eradication/: remove_persistence.md
playbooks/incident-types/: api_abuse.md  phishing.md  secret_leakage.md
playbooks/recovery/: controlled_return.md
playbooks/triage/: initial_triage.md
publish-bridge/processed/: 20260411T183034-7b6d58f4433f.json  20260411T183307-a278cc6942ee.json
publish-bridge/results/: 20260411T183034-7b6d58f4433f.json  20260411T183307-a278cc6942ee.json
schemas/: __init__.py  incident.py  sla.py
templates/: incident-communication.md  playbook-template.md
templates/communications/: executive_brief.md  jira-incident-update-payload.json
templates/incident-records/: incident_template.md
templates/reports/: technical_report.md
templates/timelines/: timeline_template.md
tests/: test_after_action_report_generator.py  test_cli_azure_isolation.py  test_cli_containment_dry_run.py  test_cli_gcp_isolation.py  test_cli_gcs_lockdown.py  test_cli_report_html.py  test_cli_s3_lockdown.py  test_cli_start_playbook.py  test_cli_workflow_next_json.py  test_evidence_manifest_deterministic.py  test_evidence_packager.py  test_forensic_hash_verifier.py  test_incident_correlation_engine.py  test_incident_summary_cli.py  test_incident_summary_file_option.py  test_incident_summary_format.py  test_incident_summary_json.py  test_ioc_enricher.py  test_ir_cycle10.py  test_isolate_azure_vm.py  test_isolate_gcp_instance.py  test_lint_playbook.py  test_lockdown_gcs_bucket.py  test_lockdown_s3_bucket.py  test_malware_triage_scorer.py  test_pcap_trigger.py  test_report_html_css.py  test_report_html_incident_context.py  test_report_html_metadata.py  test_report_html_open_flag.py  test_report_html_output.py  test_report_html_output_path.py  test_report_html_stdout.py  test_report_html_title.py  test_runbook_xref.py  test_schemas.py  test_sla.py  test_sla_tracker.py  test_state_machine.py  test_timeline_builder.py  (+10 more)
workflows/: __init__.py  state_machine.py
(+2 files in other folders)
